[gd_scene load_steps=7 format=3 uid="uid://b73ukbmk2llnr"]

[ext_resource type="Script" path="res://enemy/quills.gd" id="1_p00b3"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="2_g5hf5"]
[ext_resource type="Texture2D" uid="uid://b783lfl1lrsv1" path="res://assets/item_orbs/Orb_02.png" id="2_i84sv"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_ne8f7"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="5_d4oxc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_42cwa"]
radius = 3.16228

[node name="Quills" type="Node2D"]
script = ExtResource("1_p00b3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_i84sv")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("2_g5hf5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_42cwa")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.42109e-14, -1.42109e-14)
scale = Vector2(0.4, 0.4)

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_ne8f7")
sprite = NodePath("..")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_d4oxc")
sprite = NodePath("..")
